absolute and relative positioning as well as float basics

--- a/ecommerce/e-index.html
+++ b/ecommerce/e-index.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="e-style.css" rel="stylesheet">
     <title>E-Commerce Component</title>
 </head>
 <body>
+   
     <article class="product">
         <h1 class="product-title">Converse Chuck Taylor All Star Low Top</h1>
         <img src="../img/challenges.jpg" width="250" height="250">
-        <h3>&dollar;65.00</h3>
+        <h3 class="price">&dollar;65.00</h3>
         <p class="shipping">Free shipping</p>
-        <p>Ready to dress up or down, these classix xanvas Chucks are an everday wwardrobe staple.</p>
+        <p class="description">Ready to dress up or down, these classix xanvas Chucks are an everday wwardrobe staple.</p>
         <a href="#">More information &RightArrow;</a>
-        <h3>Product details</h3>
+        <div class="box-container">
+
+           <div class="box"></div>
+           <div class="box"></div>
+           <div class="box"></div>
+           <div class="box"></div>
+           <div class="box"></div>
+           <div class="box"></div>
+           
+        </div>
+        <h3 class="details">Product details</h3>
         <ul class="details-list">
             <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus, alias.</li>
             <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus, alias.</li>
@@ -22,5 +33,6 @@
         </ul>
         <button>Add to cart</button>
     </article>
+    
 </body>
 </html>
