flexbox challange finished

--- a/ecommerce/e-index.html
+++ b/ecommerce/e-index.html
@@ -16,7 +16,7 @@
             <img class="product-img" src="../img/challenges.jpg">
     
             <div class="mid-container inner-container">
-                <div class="ship-price clearfix">
+                <div class="product-info ">
                     <h3 class="price">&dollar;65.00</h3>
                     <p class="shipping">Free shipping</p>
                 </div>
