--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -47,19 +47,13 @@
       }
 
       menu {
-        display: flex;
-        justify-content: space-between;
-
-        padding: 16px 32px;
-
-        align-items: center;
-        background-color: #6741d9;
-
         grid-column: 2 / -1;
-      }
+        display: flex;
+        align-items: center;
+        gap: 12px;
 
-      section {
-        background-color: #e9ecef;
+        background-color: #6741d9;
+        padding: 0 40px;
       }
 
       aside {
@@ -77,24 +71,54 @@
       }
 
       .btn--trash {
-        align-self: flex-end;
         background-color: #c92a2a;
+        margin-left: auto;
+      }
+
+      section {
+        background-color: #e9ecef;
+        padding: 40px;
+
+        overflow: scroll;
+
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+      }
+
+      .email {
+        background-color: #adb5bd;
+        height: 96px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-shrink: 0;
       }
     </style>
   </head>
   <body>
     <nav>Nav</nav>
     <menu>
-      <div class="menu--left">
-        <button>New</button>
-        <button>Replay</button>
-        <button>Forward</button>
-        <button>Mark unread</button>
-      </div>
+      <button>New</button>
+      <button>Replay</button>
+      <button>Forward</button>
+      <button>Mark unread</button>
       <button class="btn--trash">Trash</button>
     </menu>
 
-    <section class="inbox">Inbox</section>
+    <section class="inbox">
+      <div class="email">Email 1</div>
+      <div class="email">Email 2</div>
+      <div class="email">Email 3</div>
+      <div class="email">Email 4</div>
+      <div class="email">Email 5</div>
+      <div class="email">Email 6</div>
+      <div class="email">Email 7</div>
+      <div class="email">Email 8</div>
+      <div class="email">Email 9</div>
+      <div class="email">Email 10</div>
+    </section>
 
     <main>Email view</main>
     <aside>Additional info</aside>
