--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -15,12 +15,22 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/hero.css" />
+    <link rel="stylesheet" href="css/featured.css" />
+    <link rel="stylesheet" href="css/how-it-works.css" />
     <title>Omnifood</title>
   </head>
   <body>
     <header class="header">
       <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
-      <nav class="main-nav">Navigation</nav>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a href="#" class="main-nav-link">How it works</a></li>
+          <li><a href="#" class="main-nav-link">Meals</a></li>
+          <li><a href="#" class="main-nav-link">Testimonials</a></li>
+          <li><a href="#" class="main-nav-link">Pricing</a></li>
+          <li><a href="#" class="main-nav-link">Try for free</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -59,6 +69,95 @@
               src="img/hero.png"
               alt="A woman eating tasty food, meals in storage container, and food bowls on a table"
               class="hero-img"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img
+              src="img/logos/business-insider.png"
+              alt="business-insider"
+              class="logo"
+            />
+            <img src="img/logos/forbes.png" alt="forbes" class="logo" />
+            <img src="img/logos/techcrunch.png" alt="techcrunch" class="logo" />
+            <img
+              src="img/logos/the-new-york-times.png"
+              alt="the-new-york-times"
+              class="logo"
+            />
+            <img src="img/logos/usa-today.png" alt="usa-today" class="logo" />
+          </div>
+        </div>
+      </section>
+      <section class="section-how">
+        <div class="container">
+          <span class="subheading">How it works</span>
+          <h2 class="heading-secondary">
+            Your daily dose of health in 3 simple steps
+          </h2>
+        </div>
+
+        <div class="container grid grid--2-cols">
+          <!-- 01 -->
+          <div class="step-text-box">
+            <p class="step-number">01</p>
+            <h3 class="heading-tertiary">
+              Tell us what you like (and what not)
+            </h3>
+            <p class="step-description">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
+            </p>
+          </div>
+
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-1.png"
+              alt="iPhone app preferences selection screen"
+              class="step-img"
+            />
+          </div>
+
+          <!-- 02 -->
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-2.png"
+              alt="iPhone app meal approving plan"
+              class="step-img"
+            />
+          </div>
+          <div class="step-text-box">
+            <p class="step-number">02</p>
+            <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+            <p class="step-description">
+              Once per week, approve the meal plan generated for you by Omnifood
+              AI. You can change ingredients, swap entire meals, or even add
+              your own recipes.
+            </p>
+          </div>
+
+          <!-- 03 -->
+          <div class="step-text-box">
+            <p class="step-number">03</p>
+            <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+            <p class="step-description">
+              Best chefs in town will cook your selected meal every day, and we
+              will deliver it to your door whenever works best for you. You can
+              change delivery schedule and address daily!
+            </p>
+          </div>
+
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-3.png"
+              alt="iPhone app delivery screen"
+              class="step-img"
             />
           </div>
         </div>
