--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/hero.css" />
     <link rel="stylesheet" href="css/featured.css" />
     <link rel="stylesheet" href="css/how-it-works.css" />
+    <link rel="stylesheet" href="css/meals.css" />
     <title>Omnifood</title>
   </head>
   <body>
@@ -77,19 +78,14 @@
         <div class="container">
           <h2 class="heading-featured-in">As featured in</h2>
           <div class="logos">
-            <img
-              src="img/logos/business-insider.png"
-              alt="business-insider"
-              class="logo"
-            />
-            <img src="img/logos/forbes.png" alt="forbes" class="logo" />
-            <img src="img/logos/techcrunch.png" alt="techcrunch" class="logo" />
+            <img src="img/logos/business-insider.png" alt="business-insider" />
+            <img src="img/logos/forbes.png" alt="forbes" />
+            <img src="img/logos/techcrunch.png" alt="techcrunch" />
             <img
               src="img/logos/the-new-york-times.png"
               alt="the-new-york-times"
-              class="logo"
             />
-            <img src="img/logos/usa-today.png" alt="usa-today" class="logo" />
+            <img src="img/logos/usa-today.png" alt="usa-today" />
           </div>
         </div>
       </section>
@@ -101,7 +97,7 @@
           </h2>
         </div>
 
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols grid--center-v">
           <!-- 01 -->
           <div class="step-text-box">
             <p class="step-number">01</p>
@@ -160,6 +156,219 @@
               class="step-img"
             />
           </div>
+        </div>
+      </section>
+      <section class="section-meals center-text">
+        <div class="container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img
+              src="img/meals/meal-1.jpg"
+              alt="Japanese Gyozas"
+              class="meal-img"
+            />
+            <div class="meal-content">
+              <span class="tag">Vegetarian</span>
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">650 Calories</li>
+                <li class="meal-attribute">NutriScore &reg; 74</li>
+                <li class="meal-attribute">4.9 rating (537)</li>
+              </ul>
+            </div>
+          </div>
+          <div class="meal">
+            <img
+              src="img/meals/meal-2.jpg"
+              alt="Avocado Salad"
+              class="meal-img"
+            />
+            <div class="meal-content">
+              <span class="tag">Vegan</span>
+              <span class="tag">Paleo</span>
+              <p class="meal-title">Avocado Salad</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">400 Calories</li>
+                <li class="meal-attribute">NutriScore &reg; 92</li>
+                <li class="meal-attribute">4.8 rating (441)</li>
+              </ul>
+            </div>
+          </div>
+          <div class="diets">
+            <p class="heading-tertiary">Works with any diet:</p>
+            <ul class="list">
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Vegan</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Gluten-free</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Lactose-free</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Keto</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Paleo</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Low FODMAP</span>
+              </li>
+              <li class="list-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="list-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 12.75 6 6 9-13.5"
+                  />
+                </svg>
+
+                <span>Kid-friendly</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="container all-recipes">
+          <a href="#" class="link">See all recipes</a>
         </div>
       </section>
     </main>
