--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -173,12 +173,14 @@
               class="meal-img"
             />
             <div class="meal-content">
-              <span class="tag">Vegetarian</span>
+              <div class="meal-tags">
+                <span class="tag tag-vegetarian">Vegetarian</span>
+              </div>
               <p class="meal-title">Japanese Gyozas</p>
               <ul class="meal-attributes">
-                <li class="meal-attribute">650 Calories</li>
-                <li class="meal-attribute">NutriScore &reg; 74</li>
-                <li class="meal-attribute">4.9 rating (537)</li>
+                <li class="meal-attribute"><span>650 Calories</span></li>
+                <li class="meal-attribute"><span>NutriScore &reg; 74</span></li>
+                <li class="meal-attribute"><span>4.9 rating (537)</span></li>
               </ul>
             </div>
           </div>
@@ -189,13 +191,15 @@
               class="meal-img"
             />
             <div class="meal-content">
-              <span class="tag">Vegan</span>
-              <span class="tag">Paleo</span>
+              <div class="meal-tags">
+                <span class="tag tag-vegan">Vegan</span>
+                <span class="tag tag-paleo">Paleo</span>
+              </div>
               <p class="meal-title">Avocado Salad</p>
               <ul class="meal-attributes">
-                <li class="meal-attribute">400 Calories</li>
-                <li class="meal-attribute">NutriScore &reg; 92</li>
-                <li class="meal-attribute">4.8 rating (441)</li>
+                <li class="meal-attribute"><span>400 Calories</span></li>
+                <li class="meal-attribute"><span>NutriScore &reg; 92</span></li>
+                <li class="meal-attribute"><span>4.8 rating (441)</span></li>
               </ul>
             </div>
           </div>
