meals almost done

--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -165,7 +165,7 @@
             Omnifood AI chooses from 5,000+ recipes
           </h2>
         </div>
-        <div class="container grid grid--3-cols">
+        <div class="container grid grid--3-cols margin-bottom-md">
           <div class="meal">
             <img
               src="img/meals/meal-1.jpg"
@@ -178,9 +178,29 @@
               </div>
               <p class="meal-title">Japanese Gyozas</p>
               <ul class="meal-attributes">
-                <li class="meal-attribute"><span>650 Calories</span></li>
-                <li class="meal-attribute"><span>NutriScore &reg; 74</span></li>
-                <li class="meal-attribute"><span>4.9 rating (537)</span></li>
+                <li class="meal-attribute">
+                  <ion-icon name="flame-outline" class="meal-icon"></ion-icon>
+                  <span class="meal-span"
+                    ><span class="meal-span--number">650</span> calories</span
+                  >
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    name="restaurant-outline"
+                    class="meal-icon"
+                  ></ion-icon>
+                  <span class="meal-span"
+                    >NutriScore &reg;
+                    <span class="meal-span--number">74</span></span
+                  >
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon name="star-outline" class="meal-icon"></ion-icon>
+                  <span class="meal-span"
+                    ><span class="meal-span--number">4.9</span> rating
+                    (537)</span
+                  >
+                </li>
               </ul>
             </div>
           </div>
@@ -197,9 +217,29 @@
               </div>
               <p class="meal-title">Avocado Salad</p>
               <ul class="meal-attributes">
-                <li class="meal-attribute"><span>400 Calories</span></li>
-                <li class="meal-attribute"><span>NutriScore &reg; 92</span></li>
-                <li class="meal-attribute"><span>4.8 rating (441)</span></li>
+                <li class="meal-attribute">
+                  <ion-icon name="flame-outline" class="meal-icon"></ion-icon>
+                  <span class="meal-span"
+                    ><span class="meal-span--number">400</span> calories</span
+                  >
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    name="restaurant-outline"
+                    class="meal-icon"
+                  ></ion-icon>
+                  <span class="meal-span"
+                    >NutriScore &reg;
+                    <span class="meal-span--number">92</span></span
+                  >
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon name="star-outline" class="meal-icon"></ion-icon>
+                  <span class="meal-span"
+                    ><span class="meal-span--number">4.8</span> rating
+                    (441)</span
+                  >
+                </li>
               </ul>
             </div>
           </div>
@@ -372,9 +412,17 @@
           </div>
         </div>
         <div class="container all-recipes">
-          <a href="#" class="link">See all recipes</a>
+          <a href="#" class="link">See all recipes &rarr;</a>
         </div>
       </section>
     </main>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
