--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/featured.css" />
     <link rel="stylesheet" href="css/how-it-works.css" />
     <link rel="stylesheet" href="css/meals.css" />
+    <link rel="stylesheet" href="css/testimonials.css" />
     <title>Omnifood</title>
   </head>
   <body>
@@ -413,6 +414,146 @@
         </div>
         <div class="container all-recipes">
           <a href="#" class="link">See all recipes &rarr;</a>
+        </div>
+      </section>
+
+      <section class="section-testimonials">
+        <div class="testimonials-content">
+          <span class="subheading">Testimonials</span>
+          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+
+          <div class="testimonials grid grid--2-cols">
+            <figure class="testimonial">
+              <img
+                src="img/customers/dave.jpg"
+                alt="dave"
+                class="img-customer"
+              />
+              <blockquote class="customer-opinion">
+                Inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+              </blockquote>
+              <p class="customer-name">&mdash; Dave Bryson</p>
+            </figure>
+            <figure class="testimonial">
+              <img src="img/customers/ben.jpg" alt="ben" class="img-customer" />
+              <blockquote class="customer-opinion">
+                The AI algorithm is crazy good, it chooses the right meals for
+                me every time. It's amazing not to worry about food anymore!
+              </blockquote>
+              <p class="customer-name">&mdash; Ben Hadley</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                src="img/customers/steve.jpg"
+                alt="steve"
+                class="img-customer"
+              />
+              <blockquote class="customer-opinion">
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+              </blockquote>
+              <p class="customer-name">&mdash; Steve Miller</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                src="img/customers/hannah.jpg"
+                alt="hannah"
+                class="img-customer"
+              />
+              <blockquote class="customer-opinion">
+                I got Omnifood for the whole family, and it frees up so much
+                time! Plus, everything is organic and vegan and without plastic.
+              </blockquote>
+              <p class="customer-name">&mdash; Hannah Smith</p>
+            </figure>
+          </div>
+        </div>
+        <div class="gallery grid grid--3-cols">
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-1.jpg"
+              alt="food-1"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-2.jpg"
+              alt="food-2"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-3.jpg"
+              alt="food-3"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-4.jpg"
+              alt="food-4"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-5.jpg"
+              alt="food-5"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-6.jpg"
+              alt="food-6"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-7.jpg"
+              alt="food-7"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-8.jpg"
+              alt="food-8"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-9.jpg"
+              alt="food-9"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-10.jpg"
+              alt="food-10"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-11.jpg"
+              alt="food-11"
+              class="img-gallery"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-12.jpg"
+              alt="food-12"
+              class="img-gallery"
+            />
+          </figure>
         </div>
       </section>
     </main>
