--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -556,6 +556,23 @@
           </figure>
         </div>
       </section>
+      <section class="section-pricing">
+        <div class="container">
+          <span class="subheading">Pricing</span>
+          <h2 class="heading-secondary">
+            Eating well without breaking the bank
+          </h2>
+        </div>
+        <div class="container grid grid--2-cols">
+          <div class="pricing-plan pricing-plan--starter">
+            <header class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="price-container"><span>$</span> 399</p>
+              <p>per month. That's just $13 per meal!</p>
+            </header>
+          </div>
+        </div>
+      </section>
     </main>
     <script
       type="module"
