cta first steps

--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/meals.css" />
     <link rel="stylesheet" href="css/testimonials.css" />
     <link rel="stylesheet" href="css/pricing.css" />
+    <link rel="stylesheet" href="css/cta.css" />
     <title>My Omnifood</title>
   </head>
   <body>
@@ -663,6 +664,50 @@
               unused days.
             </p>
           </div>
+        </div>
+      </section>
+      <section class="section-cta margin-bottom-md">
+        <div class="container grid-cta">
+          <div class="cta-text-container">
+            <p class="heading-secondary cta-title">
+              Get your first meal for free!
+            </p>
+            <p class="cta-text">
+              Healthy, tasty and hassle-free meals are waiting for you. Start
+              eating well today. You can cancel or pause anytime. And the first
+              meal is on us!
+            </p>
+            <form action="#" method="get" class="form-cta grid grid--2-cols">
+              <div class="form-item">
+                <label for="full-name">Full Name</label>
+                <input
+                  type="text"
+                  name="submitted-full-name"
+                  id="full-name"
+                  placeholder="John Smith"
+                  required
+                />
+              </div>
+              <div class="form-item">
+                <label for="email">E-mail address</label>
+                <input
+                  type="emaFull Nameil"
+                  name="submitted-full-email"
+                  id="email"
+                  placeholder="john.smith@gmail"
+                  required
+                />
+              </div>
+              <div class="form-item">
+                <label for="select-where">Where did you hear from us?</label>
+                <select name="" id="select-where">
+                  <option value=""></option>
+                </select>
+              </div>
+              <button class="btn btn--from">Sign up now</button>
+            </form>
+          </div>
+          <img src="img/eating.jpg" alt="woman eating food" class="img-cta" />
         </div>
       </section>
     </main>
