--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -666,7 +666,7 @@
           </div>
         </div>
       </section>
-      <section class="section-cta margin-bottom-md">
+      <section class="section-cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-container">
@@ -678,7 +678,7 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form action="#" method="get" class="form-cta grid grid--2-cols">
+              <form action="#" method="get" class="cta-form grid grid--2-cols">
                 <div class="form-item">
                   <label for="full-name">Full Name</label>
                   <input
@@ -710,7 +710,7 @@
                     <option value="others">Others</option>
                   </select>
                 </div>
-                <button class="btn--form">Sign up now</button>
+                <button class="btn btn--form">Sign up now</button>
               </form>
             </div>
             <div
