omnifood unresponsive finish

--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -726,7 +726,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container grid grid--5-cols">
+      <div class="container footer-box grid">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
@@ -752,8 +752,10 @@
             <p class="address">
               623 Harrison St., 2nd Floor, San Francisco, CA 94107
             </p>
-            <a href="tel:415-201-6370">415-201-6370</a><br />
-            <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+            <p class="contact-links">
+              <a href="tel:415-201-6370">415-201-6370</a><br />
+              <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+            </p>
           </address>
         </div>
         <nav class="nav-col">
@@ -766,7 +768,7 @@
           </ul>
         </nav>
         <nav class="nav-col">
-          <p class="footer-heading">Account</p>
+          <p class="footer-heading">Company</p>
           <ul class="list footer-nav">
             <li><a href="#">About Omnifood</a></li>
             <li><a href="#">For Business</a></li>
@@ -775,7 +777,7 @@
           </ul>
         </nav>
         <nav class="nav-col">
-          <p class="footer-heading">Account</p>
+          <p class="footer-heading">Resources</p>
           <ul class="list footer-nav">
             <li><a href="#">Recipe directory</a></li>
             <li><a href="#">Help center</a></li>
