responsive web design start

--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/pricing.css" />
     <link rel="stylesheet" href="css/cta.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/queries.css" />
     <title>My Omnifood</title>
   </head>
   <body>
@@ -474,7 +475,7 @@
             </figure>
           </div>
         </div>
-        <div class="gallery grid grid--3-cols">
+        <div class="gallery">
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-1.jpg"
