--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -38,7 +38,7 @@
     <title>My Omnifood</title>
   </head>
   <body>
-    <header class="header sticky">
+    <header class="header">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
       </a>
