--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <menu
+      name="description"
+      content="Omnifood is an AI-powered diets plan for people who desire to stay healthy and don't have much time"
+    ></menu>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
